--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -23,7 +23,8 @@
 
   <div class="field">
     <%= form.label :url_image %>
-    <%= form.text_field :url_image %>
+    <%= form.text_field :url_image %><br>
+    <%= image_tag coin.url_image, size:"50x50" %>
   </div>
 
   <div class="actions">
