--- a/app/views/coins/index.html.erb
+++ b/app/views/coins/index.html.erb
@@ -1,11 +1,11 @@
 <p id="notice"><%= notice %></p>
-
+ <strong>Data/Hora: </strong> <%= data_hora_br(DateTime.current) %>
 <h1>Coins</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Description</th>
+      <th>Descrição</th>
       <th>Acronym</th>
       <th>Url image</th>
       <th colspan="3"></th>
@@ -17,14 +17,14 @@
       <tr>
         <td><%= coin.description %></td>
         <td><%= coin.acronym %></td>
-        <td><%= coin.url_image %></td>
+        <td><%= image_tag coin.url_image, size:"25x25" %></td>
         <td><%= link_to 'Show', coin %></td>
         <td><%= link_to 'Edit', edit_coin_path(coin) %></td>
         <td><%= link_to 'Destroy', coin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
-</table>
+</table>  
 
 <br>
 
