Testes de Layout 2

--- a/app/views/welcome/_menu.html.erb
+++ b/app/views/welcome/_menu.html.erb
@@ -1,6 +1,6 @@
 <ul>
     <li>
-        <%= link_to "Cadastro de Moedas", coins_path %>
+       <strong> <%= link_to "Cadastro de Moedas", coins_path %> </strong>
     </li>
     <li>
         <%= link_to "Cadastro de Moedas", coins_path %>
