Mudanças nos Controllers

--- a/app/views/welcome/_menu.html.erb
+++ b/app/views/welcome/_menu.html.erb
@@ -3,12 +3,6 @@
        <strong> <%= link_to "Cadastro de Moedas", coins_path %> </strong>
     </li>
     <li>
-        <%= link_to "Cadastro de Moedas", coins_path %>
-    </li>
-    <li>
-        <%= link_to "Cadastro de Moedas", coins_path %>
-    </li>
-    <li>
-        <%= link_to "Cadastro de Moedas", coins_path %>
+        <%= link_to "Cadastro de tipos de Mineração", mineracaos_path %>
     </li>
 </ul>
