--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -13,4 +13,7 @@
 //= require rails-ujs
 //= require activestorage
 //= require turbolinks
-//= require_tree .
+//= require_self
+
+<% msg = Time.now.hour < 12 ? "Bom dia!" : "Olá!!" %>
+alert("<%= msg %>");
