--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :url_image %>
   </div>
 
+  <div class="field">
+    <%= form.label :mineracao_id %>
+    <%= form.select("mineracao_id", @mineracao_opcoes, { include_blank: "Selecione..." }) %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
